client/client-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-route
  namespace: example
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/client-gateway
  http:
  - route:
    - destination:
        host: client
        port:
          number: 8080
